--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: ruby
 rvm:
   - 1.9.3
-before_script:
-  - "bundle exec rake db:test:prepare"
+script:
+  - "RAILS_ENV=test bundle exec rake --trace db:migrate spec cucumber"
